--- a/reflections/manifest.json
+++ b/reflections/manifest.json
@@ -8,16 +8,25 @@
   "orientation": "portrait",
   "background_color": "#1f1815",
   "theme_color": "#ff6b3d",
+
   "icons": [
-  {
-    "src": "/reflections/assets/reflections-icon-192.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  },
-  {
-    "src": "/reflections/assets/reflections-icon-512.png",
-    "sizes": "512x512",
-    "type": "image/png"
-  }
-]
+    {
+      "src": "/reflections/icon-180.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/reflections/assets/reflections-icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/reflections/assets/reflections-icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ]
 }
