--- a/reflections/manifest.json
+++ b/reflections/manifest.json
@@ -2,7 +2,7 @@
   "name": "Stone Grill Reflections",
   "short_name": "Reflections",
   "description": "Read, listen, and share the reflections of Ninox Antolihao — Stone Grill Press.",
-  "start_url": "/reflections/index.html",
+  "start_url": "/reflections",
   "scope": "/reflections/",
   "display": "standalone",
   "orientation": "portrait",
